@@ -1,6 +1,7 @@
 <?php
 # $Id$
 
+require_once "grab_globals.inc.php";
 include "config.inc";
 include "functions.inc";
 include "$dbsys.inc";
