@@ -3,6 +3,7 @@
 
 # mrbs/month.php - Month-at-a-time view
 
+require_once "grab_globals.inc.php";
 include "config.inc";
 include "functions.inc";
 include "$dbsys.inc";
